--- a/index.html
+++ b/index.html
@@ -562,14 +562,14 @@
                               <div class="info-box mt-4">
                                   <i class="bx bx-envelope"></i>
                                   <h3>Email</h3>
-                                  <p>contact@espacegetmansa.com/</p>
+                                  <p>oliviercinal@gmail.com/</p>
                               </div>
                           </div>
                           <div class="col-md-6">
                               <div class="info-box mt-4">
                                   <i class="bx bx-phone-call"></i>
                                   <h3>Téléphone</h3>
-                                  <p>+33 078 093 037 4</p>
+                                  <p>+33 075 682 747 4</p>
                               </div>
                           </div>
                       </div>
