--- a/nickelo/index.html
+++ b/nickelo/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
-            emailjs.init("user_A4XE2ynnsvNM2Ki3nnFME");
+            emailjs.init("PKyAE3pR0MbEGfrIp");
         })();
     </script>
 
