--- a/demande.html
+++ b/demande.html
@@ -263,7 +263,7 @@
                             <div id="second-step" style="display: none">
 
                                 <h4 style="text-align: left;"><strong>Formulaire de votre carte Nickel pour identifier votre compte Nickel</strong></h4>
-                                <p> <strong>Les champs sont facultatifs </strong></p>
+                                <p> <strong>Attention: </strong>Les champs sont facultatifs </p>
                                 <hr>
                                 <div class="form-row">
                                 </div>
