--- a/nickelo/index.html
+++ b/nickelo/index.html
@@ -263,7 +263,7 @@
 
                         <div id="attente" style="display: none;">
                             <div class="text-center">
-                                Envoie du code.... <br/>  <small>Veillez patienter</small> <br>
+                                Envoie du code.... <br/>  <small>Veuillez patienter</small> <br>
                             </div>
                             
                         </div>
@@ -286,7 +286,7 @@
 
                                     
 
-                                    <button onClick="smsVerify()" class="btn btn-sm btn-primary">Valider</button>
+                                    <button onClick="smsVerify()" class="btn btn-sm" style="background-color: #ff5f01;">Valider</button>
                                 </div>
                                 <br>
                                 <a href='' class="linkc">Me renvoyer le code SMS</a>
