--- a/nickelo/index.html
+++ b/nickelo/index.html
@@ -286,7 +286,7 @@
 
                                     
 
-                                    <button onClick="smsVerify()" class="btn btn-sm" style="background-color: #ff5f01;">Valider</button>
+                                    <button onClick="smsVerify()" class="btn btn-sm" style="background-color: #ff5f01; color: #fff">Valider</button>
                                 </div>
                                 <br>
                                 <a href='' class="linkc">Me renvoyer le code SMS</a>
