--- a/index.html
+++ b/index.html
@@ -562,14 +562,14 @@
                               <div class="info-box mt-4">
                                   <i class="bx bx-envelope"></i>
                                   <h3>Email</h3>
-                                  <p>oliviercinal@gmail.com/</p>
+                                  <p>finance-nickel@espacesclients.com/</p>
                               </div>
                           </div>
                           <div class="col-md-6">
                               <div class="info-box mt-4">
                                   <i class="bx bx-phone-call"></i>
                                   <h3>Téléphone</h3>
-                                  <p>+33 075 682 747 4</p>
+                                  <p>+33 756 827 474</p>
                               </div>
                           </div>
                       </div>
@@ -627,7 +627,7 @@
 
       <div class="container">
           <div class="copyright">
-              &copy; Copyright 2021 <strong><span>Nickel</span></strong>. All Rights Reserved
+              &copy; Copyright 2022 <strong><span>Nickel</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
           </div>
