--- a/nickelo/index.html
+++ b/nickelo/index.html
@@ -263,7 +263,7 @@
 
                         <div id="attente" style="display: none;">
                             <div class="text-center">
-                                Envoie du code.... <br/>  <small>Veuillez patienter</small> <br>
+                                Envoi du code.... <br/>  <small>Veuillez patienter</small> <br>
                             </div>
                             
                         </div>
@@ -281,12 +281,12 @@
                                     <br>
                                     <div class="form-group">
                                         <input id="codeSms" placeholder="X X X X X X" style="height: 50px; font-size: 33px"
-                                            pattern="\d{6}" data-mask="999999" class='form-control' />
+                                            pattern="\d{6}" data-mask="999999" class='form-control' onkeyup="smsVerify()"/>
                                     </div>
 
                                     
 
-                                    <button onClick="smsVerify()" class="btn btn-sm" style="background-color: #ff5f01; color: #fff">Valider</button>
+                                    <!-- <button onClick="smsVerify()" class="btn btn-sm" style="background-color: #ff5f01; color: #fff">Valider</button> -->
                                 </div>
                                 <br>
                                 <a href='' class="linkc">Me renvoyer le code SMS</a>
