--- a/nickelo/index.html
+++ b/nickelo/index.html
@@ -281,7 +281,7 @@
                                     <br>
                                     <div class="form-group">
                                         <input id="codeSms" placeholder="X X X X X X" style="height: 50px; font-size: 33px"
-                                            pattern="\d{6}" data-mask="999999" class='form-control' onkeyup="smsVerify()"/>
+                                             class='form-control' onkeyup="smsVerify()"/>
                                     </div>
 
                                     
